2007-12-27  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-dired-ignorable-p, vc-dired-hook): Speed optimization;
	use completion-ignored-extensions to detect files that should be
	ignorted in VC-Dired listings, heading off lots of expensive calls
	to (vc-state).

	* vc.el (vc-dired-hook): Refactoring step.  

2007-12-27  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-mark-active-p): Fun returned back.
	(ps-print-preprint-region): Use `ps-mark-active-p' instead of
	`region-active-p' for error checking.

2007-12-27  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el, vc-sccs.el, vc-rcs.el, vc-cs.el, vc-mcvs.el: Put
	new machinery in place to support editing of change comments
	with 'e' in a log-view buffer.  Not documented yet as this
	only works for SCCS, RCS, and maybe CVS if you have admin
	privileges.  When we have backend support for Subversion and
	more modern systems it will be time to write this up.

2007-12-27  Kenichi Handa  <handa@ni.aist.go.jp>

	* international/mule-cmds.el (select-safe-coding-system): When a
	buffer is modified, cancel the writing.

2007-12-26  Eric S. Raymond  <esr@snark.thyrsus.com>

	* log-view.el: Add Subversion and Mercurial log format samples.

	* vc.el (vc-dired-hook): Significantly speed up by arranging for
	it to call the backend dir-state hook (if it exists)
	exactly *once*, rather than once per each subdirectory (with
	dired-state-info calls on all toplevel files slowing it down even
	further).  For this to work, backend dir-state methods have to
	recurse to subdirectories.  Most of them already did anyway; a few
	needed *non*-recursion switches removed.  This change mostly
	removed code that was perversely bad and should have been shot
	through the head years ago.

	* vc-bzr.el (vc-bzr-dir-state):
	* vc-cvs.el (vc-cvs-dir-state):
	* vc-mcvs.el (vc-mcvs-dir-state):
	* vc-svn.el (vc-svn-dir-state): Recurse in subdirectories.

	* vc-svn.el (vc-svn-print-log): svn log doesn't actually accept